ajustes pequeños
